Fix horizontal scrollbar

--- a/landing/src/styles/landing.module.css
+++ b/landing/src/styles/landing.module.css
@@ -69,7 +69,6 @@
 }
 
 .p1 {
-  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
